<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />


    <TextView
        android:id="@+id/registeredTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:textColor="@color/blue_grey_600"
        android:textSize="18sp"
        tools:text="@string/You_have_successfully_registered_with_this__s" />


    <LinearLayout
        android:id="@+id/settingsBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:text="@string/settings"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/showAddsSwitch"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginEnd="16dp"
            android:switchPadding="8dp"
            android:text="@string/show_ads"
            android:textColor="@color/blue_grey_600"
            android:textSize="16sp" />

        <RelativeLayout
            android:id="@+id/numberOfAdsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/number_of_ads_per_day"
                android:textColor="@color/blue_grey_600"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/numberOfAdsEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:width="50dp"
                android:inputType="number"
                android:maxLength="4"
                tools:text="10" />


        </RelativeLayout>

        <Button
            android:id="@+id/updateButton"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_button"
            android:text="@string/update"
            android:textColor="@color/white" />
    </LinearLayout>

    <TextView
        android:id="@+id/preferencesBox"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:drawableEnd="@drawable/arrow_less"
        android:focusable="true"
        android:gravity="center_vertical"
        android:text="@string/interests"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/adLanguagesBox"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:drawableEnd="@drawable/arrow_less"
        android:focusable="true"
        android:gravity="center_vertical"
        android:text="@string/ad_languages"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <Button
        android:id="@+id/request_ad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/rounded_button"
        android:text="@string/request_an_ad"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

</LinearLayout>